Commit - Gave Luncher Image in Header the ID name of luncherHeaderImg, so we can set its height and width static to prevent distortion in the header due to other styling.

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -80,6 +80,10 @@
     display: none;
   }
 }
+#luncherHeaderImg {
+  width: 298px;
+  height: 95px;
+}
 .width-carousel {
   width: 85%;
 }
