--- a/LESS/header.less
+++ b/LESS/header.less
@@ -39,3 +39,10 @@
           display: none;
         }
         }
+
+        #luncherHeaderImg {
+
+          width: 298px;
+          height: 95px;
+
+        }       
